minijinja/tests/snapshots/test_templates__vm@err_bad_kwargs_unpack.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ get_args(**[1, 2, 3]) }}"
info: {}
input_file: minijinja/tests/inputs/err_bad_kwargs_unpack.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "attempted to apply keyword arguments from non map (got sequence)",
    name: "err_bad_kwargs_unpack.txt",
    line: 1,
}

invalid operation: attempted to apply keyword arguments from non map (got sequence) (in err_bad_kwargs_unpack.txt:1)
-------------------------- err_bad_kwargs_unpack.txt --------------------------
   1 > {{ get_args(**[1, 2, 3]) }}
     i    ^^^^^^^^^^^^^^^^^^^^^ invalid operation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
